# btp-3d-swarm-argos

./: .gitignore  CMakeLists.txt  configure_30_swarm.py  make_test_argos_long.py  offline_exact_lambda2.py  plot_btp_results.py
experiments/: test.argos
overnight_results/20260506_233333/0002_quick_clean_medium_seed2/: btp_loop_functions_generated.cpp
overnight_results/20260506_233333/0005_quick_noisy_medium_seed2/: btp_loop_functions_generated.cpp  test_generated.argos
overnight_results/20260506_233333/0007_quick_split_medium_seed1/: test_generated.argos
overnight_results/20260506_233333/0008_quick_split_medium_seed2/: test_generated.argos
overnight_results/20260506_233333/0010_quick_high_obstacle_seed1/: btp_loop_functions_generated.cpp
overnight_results/20260506_233333/0011_quick_high_obstacle_seed2/: btp_loop_functions_generated.cpp
overnight_results/20260506_233733/: test_original_backup.argos
overnight_results/20260506_233733/0001_scale_N20_seed1/: btp_loop_functions_generated.cpp  test_generated.argos
overnight_results/20260506_233733/0002_scale_N20_seed2/: btp_loop_functions_generated.cpp  test_generated.argos
overnight_results/20260506_233733/0003_scale_N20_seed3/: btp_loop_functions_generated.cpp  test_generated.argos
overnight_results/20260506_233733/0004_scale_N20_seed4/: btp_loop_functions_generated.cpp  test_generated.argos
overnight_results/20260506_233733/0005_scale_N20_seed5/: btp_loop_functions_generated.cpp  test_generated.argos
overnight_results/20260506_233733/0010_scale_N30_seed5/: test_generated.argos
overnight_results/20260506_233733/0011_scale_N40_seed1/: btp_loop_functions_generated.cpp  test_generated.argos
overnight_results/20260506_233733/0012_scale_N40_seed2/: btp_loop_functions_generated.cpp  test_generated.argos
overnight_results/20260506_233733/0013_scale_N40_seed3/: btp_loop_functions_generated.cpp  test_generated.argos
overnight_results/20260506_233733/0014_scale_N40_seed4/: btp_loop_functions_generated.cpp  test_generated.argos
overnight_results/20260506_233733/0015_scale_N40_seed5/: btp_loop_functions_generated.cpp  test_generated.argos
overnight_results/20260506_233733/0016_scale_N50_seed1/: btp_loop_functions_generated.cpp  test_generated.argos
overnight_results/20260506_233733/0017_scale_N50_seed2/: btp_loop_functions_generated.cpp  test_generated.argos
overnight_results/20260506_233733/0018_scale_N50_seed3/: btp_loop_functions_generated.cpp  test_generated.argos
overnight_results/20260506_233733/0019_scale_N50_seed4/: btp_loop_functions_generated.cpp  test_generated.argos
src/: btp_loop_functions.connectivity_backup.cpp  btp_loop_functions.cpp  decoy_controller.cpp  influential_controller.cpp
(+155 files in other folders)
